--- a/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
+++ b/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
@@ -6,29 +6,73 @@
 - 02.ProtoBuf的介绍
     - 2.1 ProtoBuf是什么
     - 2.2 ProtoBuf和json
-
+    - 2.3 ProtoBuf问题思考
     - 2.4 ProtoBuf的不足
+    - 2.5 创建proto文件
+    - 2.6 ProtoBuf核心思想
 - 03.gRPC实践的介绍
     - 3.1 gRPC简单介绍
     - 3.2 为何要用gRPC
-    - 3.2 gRPC如何使用
-    - 3.3 gRPC通信方式
-    - 3.4 gRPC通信流程
-    - 3.5 gRPC通信注意点
-- 04.gRPC通信原理
+    - 3.3 gRPC定义服务
+    - 3.4 gRPC生成代码
+    - 3.5 gRPC如何使用
+    - 3.6 同步和异步操作
+    - 3.7 gRPC一些操作
+- 04.gRPC通信实践
     - 4.1 gRPC通信技术点
+    - 4.2 核心设计思路
+    - 4.3 定义ProtoBuf消息
+    - 4.4 请求/响应的读写
+    - 4.5 网络日志打印
+    - 4.6 如何做网络缓存
+- 05.ProtoBuf核心原理
+    - 5.1 ProtoBuf具备优势
+    - 5.2 
+- 06.gRPC核心原理
+    - 6.1 
+
 
 
 
 
 ### 01.网络请求库背景
 #### 1.1 网络库的大背景
+- rpc概述
+    - RPC（Remote Procedure Call）-远程过程调用，他是一种通过网络从远程计算机程序上请求服务，而不需要了解底层网络技术的协议。
+    - RPC 协议包括序列化、协议编解码器和网络传输栈。
+- gRPC介绍
+    - gRPC 一开始由 Google 开发，是一款语言中立、平台中立、开源的远程过程调用(RPC)系统。
+- OkHttp介绍
+    - 最常见的网络请求库。
 
 
 #### 1.2 网络库的对比
+- rpc和http区别
+    - RPC 和 HTTP都是微服务间通信较为常用的方案之一，其实RPC 和 HTTP 并不完全是同一个层次的概念，它们之间还是有所区别的。
+    - 1.RPC 是远程过程调用，其调用协议通常包括序列化协议和传输协议。序列化协议有基于纯文本的 XML 和 JSON、有的二进制编码的ProtoBuf。传输协议是指其底层网络传输所使用的协议，比如 TCP、HTTP。
+    - 2.可以看出HTTP是RPC的传输协议的一个可选方案，比如说 gRPC 的网络传输协议就是 HTTP。HTTP 既可以和 RPC 一样作为服务间通信的解决方案，也可以作为 RPC 中通信层的传输协议（此时与之对比的是 TCP 协议）。
+
 
 
 #### 1.3 网络库收益分析
+
+
+#### 1.4 学习计划说明
+- 基础入门掌握
+    - 1.完成ProtoBuf基础了解和学习【3h】【完成】
+    - 2.尝试ProtoBuf和json效率测试【3h】【进行中】
+    - 3.gRPC环境配置和官方文档和Demo学习【6h】【完成】
+    - 4.熟练使用gRPC，比如将玩Android接口，用gRPC方式去请求【8h】【进行中】
+    - 5.gRPC的四种通信模式【4h】【未开始】
+- 原理解读说明
+    - 1.理解gRPC的基础通信原理【4h】【进行中】
+    - 2.gRpc网络请求的核心设计思路【4h】【未开始】
+    - 3.Proto文件如何在编译期间生成java文件原理研究【4h】【未开始】
+    - 4.Proto有哪些缺点，如何优化，跟json，xml空间上性能分析【4h】【未开始】
+- 技术精进计划
+    - 1.理解各种网络请求库的设计，性能对比，各自偏向解决问题【4h】【未开始】
+    - 2.通透理解protoBuf实现数据缓冲的原理，谷歌如何做性能优化的反思【4h】【未开始】
+    - 3.讲出来，实践写Demo，内化。和同事讨论关键技术点【2h】【未开始】
 
 
 
@@ -36,17 +80,63 @@
 #### 2.1 ProtoBuf是什么
 - ProtoBuf简单介绍
     - 它是Google公司发布的一套开源编码规则，基于二进制流的序列化传输，可以转换成多种编程语言，几乎涵盖了市面上所有的主流编程语言，是目前公认的非常高效的序列化技术。
+- ProtoBuf是一种灵活高效可序列化的数据协议
+    - 相于XML，具有更快、更简单、更轻量级等特性。支持多种语言，只需定义好数据结构，利用ProtoBuf框架生成源代码，就可很轻松地实现数据结构的序列化和反序列化。
+    - 一旦需求有变，可以更新数据结构，而不会影响已部署程序。
 - ProtoBuf的Github主页：
     - https://github.com/protocolbuffers/protobuf
 
 
-#### 2.2 ProtoBuf的优势
+#### 2.2 ProtoBuf和json
+- ProtoBuf就好比信息传输的媒介
+    - 如果用一句话来概括ProtoBuf和JSON的区别的话，那就是：对于较多信息存储的大文件而言，ProtoBuf的写入和解析效率明显高很多，而JSON格式的可读性明显要好。
+- 网上有一段数据用以对此ProtoBuf和JSON之间的性能差异：
+    - JSON
+    ``` java
+    总共写65535条Data记录到文件中，测试结果如下：
+    生成的文件尺寸是23,733k。
+    生成文件的时间是12.80秒。
+    从该文件中解析的时间是11.50秒。
+    ```
+    - ProtoBuf
+    ``` java
+    总共写65535条Data记录到文件中，测试结果如下：
+    生成的文件尺寸是3760k。
+    生成文件的时间是0.08秒。
+    从该文件中解析的时间是0.07秒。
+    ```
 
 
-#### 2.3 ProtoBuf核心原理
+#### 2.3 ProtoBuf问题思考
+- ProtoBuf 是一个小型的软件框架，也可以称为protocol buffer 语言，带着疑问会发现Proto 有很多需要了解：
+    - Proto 文件书写格式，关键字package、option、Message、enum 等含义和注意点是什么？
+    - 消息等嵌套如何使用？实现的原理？
+    - Proto 文件对于不同语言的编译，和产生的obj 文件的位置？
+    - Proto 编译后的cc 和java 文件中不同函数的意义？
+    - 如何实现*.proto 到*.java、*.h、*.cc 等文件？
+    - 数据包的组成方式、repeated 的含义和实现？
+    - Proto 在service和client 的使用，在java 端和native 端如何使用？
+    - 与xml 、json 等相比时间、空间上的比较如何？
 
 
 #### 2.4 ProtoBuf的不足
+- 1.protoBuf会导致客户端的体积增加许多。
+    - protoBuf所生成的模型文件十分巨大，略复杂一些的数据可以达到1MB，请注意，1MB只是一个模型文件。
+    - 导致该问题的原因是，protoBuf为了实现对传输数据的信息补全（可以参看编码原理），将编码、解码的代码都整合到了每一个独立的模型文件中，因此导致代码有非常大的冗余
+- 2.protoBuf生成的代码阅读性差
+    - .proto文件去生成相应的模型，而生成出来的模型无论从可读性还是易用性上来说都是较差的，更不用说java版本的巨大尺寸。
+    - 并且生成出来的模型文件是不允许修改的（protoBuf官方建议），如果有新增字段，都必须依赖于.proto文件重新进行生成。
+
+
+
+#### 2.5 创建proto文件
+- 思考一下如何快速创建正确proto文件
+    - 
+
+
+
+#### 2.6 ProtoBuf核心思想
+
 
 
 
@@ -64,22 +154,128 @@
 #### 3.2 为何要用gRPC
 - 为什么要使用ProtoBuf和gRPC
     - 简而言之，ProtoBuf就好比信息传输的媒介，类似我们常用的json，而grpc则是传输他们的通道，类似我们常用的socket。
+- gRPC被谷歌推荐
+    - 作为google公司极力推荐的分布式网络架构，基于HTTP2.0标准设计，使用用ProtoBuf作为序列化工具，在移动设备上表现更好，更省电和节省空间占用。
+- 像这种国外的开源框架，还是建议大家先直接阅读官方文档，再看国内的文章，这样才不容易被误导。
+    - [官方文档](https://grpc.io/docs/platforms/android/java/quickstart/)
+    - [官方示例](https://github.com/grpc/grpc-java/tree/master/examples/android)
+    - 具体如何实践可以看：[手把手教你使用ProtoBuf](https://blog.csdn.net/xuexiangjys/article/details/88780124)
+    - [Android中使用GRPC简明教程](https://blog.csdn.net/haohulala/article/details/129211997)
 
 
-#### 3.2 gRPC如何使用
+#### 3.3 gRPC定义服务
+- gRPC的四种通信模式
+    - gRPC针对不同的业务场景，一共提供了四种通信模式，分别是简单一元模式，客户端流模式，服务端流模式和双向流模式，接下来这个进行介绍。
+    ``` java
+    service RouteGuide {
+        //一个简单的 RPC，其中客户端使用存根向服务器发送请求并等待响应返回，就像普通的函数调用一样。
+        rpc GetFeature(Point) returns (Feature) {}
+        //服务器端流式 RPC，客户端向服务器发送请求并获取流以读取一系列消息。
+        rpc ListFeatures(Rectangle) returns (stream Feature) {}
+        //客户端流式 RPC，客户端写入一系列消息并将它们发送到服务器，再次使用提供的流。
+        rpc RecordRoute(stream Point) returns (RouteSummary) {}
+        //双向流式 RPC，双方使用读写流发送一系列消息。
+        rpc RouteChat(stream RouteNote) returns (stream RouteNote) {}
+    }
+    ```
+- 简单一元模式
+    - 所谓简单一元模式，实际上就是客户端和服务端进行一问一答的通信。
+    - 这种通信模式是最简单的，应用场景有无线设备之间和客户端之间保持连接的心跳检测，每隔一段时间就给服务端发送一个心跳检测包，服务端接收到心跳包后就知道相应客户端处于连接状态。
+- 客户端流模式
+    - 客户端流模式的意思就是客户端可以一次性发送多个数据片段，当然数据片段是一个类，具体的类有哪些字段都是你在最开始的proto文件中进行指定的。
+    - 这种模式的应用场景就比如客户端向服务端发送一连串的数据，然后服务端最后发送一个响应数据表示接收成功。
+- 服务端流模式
+    - 服务端流模式和客户端流模式正好相反，本质都是差不多的，应用场景有客户端发送一个数据包告诉服务端，我需要某某数据，然后服务器将对应的所有信息都发送给客户端。
+- 双向流模式
+    - 双向流模式是最后一种，也是最常用的一种，在这种模式中，客户端和服务端的通信没有什么限制，是比较理想的通信模式，应用场景也最为广泛，因为在这种模式中，你也可以只发送一个数据包。
 
 
-#### 3.3 gRPC通信方式
+
+#### 3.4 gRPC生成代码
+- 从我们的 .proto 服务定义中生成 gRPC 客户端接口。
+    - 使用proto带有特殊 gRPC Java 插件的协议缓冲区编译器来执行此操作。你需要使用 proto3编译器（支持 proto2 和 proto3 语法）以生成 gRPC 服务。
+    ```
+    service Greeter {
+      rpc SayHello (HelloRequest) returns (HelloReply) {}
+    }
+    
+    message HelloRequest {
+      string name = 1;
+    }
+    message HelloReply {
+      string message = 1;
+    }
+    ```
+- 编译器生成的代码如下所示
+    - Greeter 会编译生成 GreeterGrpc.java，具有服务中定义的所有方法Greeter。
+    - HelloRequest 会编译生成 HelloRequest.java，HelloRequestOrBuilder.java。
+    - HelloReply 会编译生成 HelloReply.java ，HelloReplyOrBuilder.java。
+    - 以message开头的对象，编译会生成协议缓冲区代码的代码，用于填充、序列化和检索我们的请求和响应消息类型。
 
 
-#### 3.4 gRPC通信流程
+
+
+#### 3.5 gRPC如何使用
+- 大概的实践步骤如下所示
+    - 第一步：添加项目中build中的插件配置。添加：classpath "com.google.protobuf:protobuf-gradle-plugin:0.9.1"
+    - 第二步：在App模块下添加plugin插件配置，添加基础库依赖等操作。还要做一些proto配置。具体看app模块下的build.gradle文件。
+    - 第三步：在main目录下创建proto目录，创建一个和java目录同级的proto文件夹，这样做是因为在build.gradle文件中指定了去proto文件夹中找到*.proto文件，并且编译成java代码。
+    - 第四步：编译项目，在build目录(build->generated->source->proto->debug)下看到对应的java文件
+    - 第五步：开始使用gRPC去做网络请求操作。具体可以看：HelloWorldActivity
+- 问题思考一下
+    - 能否把生成的代码拷贝出来（如果proto不经常变的情况），把插件禁用掉，避免每次都生成？？？
+- 如何使用gRPC去做网络请求
+    ``` java
+    //构建Channel
+    channel = ManagedChannelBuilder.forAddress(host, port).usePlaintext().build();
+    //构建服务请求API代理
+    GreeterGrpc.GreeterBlockingStub stub = GreeterGrpc.newBlockingStub(channel);
+    //构建请求实体，HelloRequest是自动生成的实体类
+    HelloRequest request = HelloRequest.newBuilder().setName(message).build();
+    //进行请求并且得到响应数据
+    HelloReply reply = stub.sayHello(request);
+    //得到请求响应的数据
+    String replyMessage = reply.getMessage();
+    ```
 
 
 
-#### 3.5 gRPC通信注意点
+#### 3.6 同步和异步操作
+- 创建一个存根，或者更确切地说，两个存根：
+    - 阻塞/同步存根：这意味着 RPC 调用等待服务器响应，并将返回响应或引发异常。
+    - 一个非阻塞/异步存根，它对服务器进行非阻塞调用，异步返回响应。您只能使用异步存根进行某些类型的流式调用。
+- 创建同步和异步操作如下
+    ``` java
+    //同步阻塞
+    GreeterGrpc.GreeterBlockingStub stub = GreeterGrpc.newBlockingStub(channel);
+    //异步调用
+    GreeterGrpc.GreeterStub stub = GreeterGrpc.newStub(channel);
+    ```
+
+
+#### 3.7 gRPC一些操作
+- RPC 超时
+    - gRPC 允许客户指定他们愿意等待 RPC 完成多长时间，然后再以错误终止 RPC。在server端，可以查询特定 RPC 是否已过时，或者需要多少时间才能完成 RPC。
+- RPC 终止
+    - 在 gRPC 中，客户端和服务器都对调用的成功做出独立和本地的判断，它们的结论可能不一致。 
+    - 这意味着，例如，您可能有一个 RPC 在服务器端成功完成（“我已经发送了我所有的响应！”）但在客户端失败（“响应到达前我已经截至了！”）。
+- RPC 取消
+    - 客户端或服务器可以随时取消 RPC。RPC会立即响应取消操作而终止，以便不再进行进一步的工作。
 
 
 
+
+#### 参考博客
+- Android protoBuf 原理
+    - https://blog.csdn.net/shift_wwx/article/details/120532407
+- Protobuf编码原理和核心API
+    - https://zhuanlan.zhihu.com/p/542208233
+- 快速理解Protobuf的背景、原理、使用、优缺点
+    - https://developer.aliyun.com/article/1081532
+- 原生protobuf的缺陷，以及类库优化思路
+    - https://www.jianshu.com/p/60d8480083f0
+- grpc原理及四种实现方式
+    - https://zhuanlan.zhihu.com/p/576031935
 
 
 
