feat：网络重定向拦截器

--- a/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
+++ b/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
@@ -7,7 +7,7 @@
     - 2.1 ProtoBuf是什么
     - 2.2 ProtoBuf和json
     - 2.3 ProtoBuf问题思考
-    - 2.4 ProtoBuf的不足
+    - 2.4 ProtoBuf优缺点
     - 2.5 创建proto文件
     - 2.6 ProtoBuf核心思想
 - 03.gRPC实践的介绍
@@ -26,8 +26,8 @@
     - 4.5 网络日志打印
     - 4.6 如何做网络缓存
 - 05.ProtoBuf核心原理
-    - 5.1 ProtoBuf具备优势
-    - 5.2 
+    - 5.1 ProtoBuf数据结构
+    - 5.2 ProtoBuf编码方式
 - 06.gRPC核心原理
     - 6.1 
 
@@ -53,8 +53,8 @@
     - 2.可以看出HTTP是RPC的传输协议的一个可选方案，比如说 gRPC 的网络传输协议就是 HTTP。HTTP 既可以和 RPC 一样作为服务间通信的解决方案，也可以作为 RPC 中通信层的传输协议（此时与之对比的是 TCP 协议）。
 
 
-
 #### 1.3 网络库收益分析
+
 
 
 #### 1.4 学习计划说明
@@ -84,7 +84,9 @@
     - 相于XML，具有更快、更简单、更轻量级等特性。支持多种语言，只需定义好数据结构，利用ProtoBuf框架生成源代码，就可很轻松地实现数据结构的序列化和反序列化。
     - 一旦需求有变，可以更新数据结构，而不会影响已部署程序。
 - ProtoBuf的Github主页：
-    - https://github.com/protocolbuffers/protobuf
+    - 官方开源地址 ：https://github.com/protocolbuffers/protobuf
+    - 语法指南：https://developers.google.com/protocol-buffers/docs/proto
+
 
 
 #### 2.2 ProtoBuf和json
@@ -119,13 +121,21 @@
     - 与xml 、json 等相比时间、空间上的比较如何？
 
 
-#### 2.4 ProtoBuf的不足
-- 1.protoBuf会导致客户端的体积增加许多。
+
+#### 2.4 ProtoBuf优缺点
+- ProtoBuf优点
+    - 性能：1.体积小，序列化后，数据大小可缩小3-10倍；2.序列化速度快，比XML和JSON快20-100倍；3.传输速度快，因为体积小，传输起来带宽和速度会有优化
+    - 使用优点：1.使用简单，proto编译器自动进行序列化和反序列化；2.维护成本低，多平台仅需维护一套对象协议文件(.proto)；3.向后兼容性(扩展性)好，不必破坏旧数据格式就可以直接对数据结构进行更新；4.加密性好，Http传输内容抓包只能看到字节
+    - 使用范围：跨平台、跨语言(支持Java, Python, Objective-C, C+, Dart, Go, Ruby, and C#等），可扩展性好
+- ProtoBuf缺点
+    - 功能缺点：不适合用于对基于文本的标记文档（如HTML）建模，因为文本不适合描述数据结构
+    - 通用性较差：json、xml已成为多种行业标准的编写工具，而ProtoBuf只是Google公司内部的工具
+    - 自解耦性差：以二进制数据流方式存储（不可读），需要通过.proto文件才能了解到数据结构
+    - 阅读性差：.proto文件去生成相应的模型，而生成出来的模型无论从可读性还是易用性上来说都是较差的。并且生成出来的模型文件是不允许修改的（protoBuf官方建议），如果有新增字段，都必须依赖于.proto文件重新进行生成。
+- .protoBuf会导致客户端的体积增加许多
     - protoBuf所生成的模型文件十分巨大，略复杂一些的数据可以达到1MB，请注意，1MB只是一个模型文件。
     - 导致该问题的原因是，protoBuf为了实现对传输数据的信息补全（可以参看编码原理），将编码、解码的代码都整合到了每一个独立的模型文件中，因此导致代码有非常大的冗余
-- 2.protoBuf生成的代码阅读性差
-    - .proto文件去生成相应的模型，而生成出来的模型无论从可读性还是易用性上来说都是较差的，更不用说java版本的巨大尺寸。
-    - 并且生成出来的模型文件是不允许修改的（protoBuf官方建议），如果有新增字段，都必须依赖于.proto文件重新进行生成。
+
 
 
 
@@ -163,9 +173,14 @@
     - [Android中使用GRPC简明教程](https://blog.csdn.net/haohulala/article/details/129211997)
 
 
+
 #### 3.3 gRPC定义服务
 - gRPC的四种通信模式
     - gRPC针对不同的业务场景，一共提供了四种通信模式，分别是简单一元模式，客户端流模式，服务端流模式和双向流模式，接下来这个进行介绍。
+    - Unary-从客户机发送单个请求，从服务器发送回单个响应。
+    - Server Streaming-从客户机发送一个请求，然后从服务器发送回一系列消息。
+    - Client Streaming -从客户端向服务器发送一系列消息，服务器用一条消息作出回应。
+    - Bidirectional streaming -客户端和服务器相互发送消息流的地方。
     ``` java
     service RouteGuide {
         //一个简单的 RPC，其中客户端使用存根向服务器发送请求并等待响应返回，就像普通的函数调用一样。
@@ -263,6 +278,17 @@
     - 客户端或服务器可以随时取消 RPC。RPC会立即响应取消操作而终止，以便不再进行进一步的工作。
 
 
+### 05.ProtoBuf核心原理
+#### 5.1 ProtoBuf数据结构
+- ProtoBuf 数据结构
+    - 采用 TLV存储方式，即TAG-Length-Value(标识-长度-字段值)
+    - 不需要分隔符就能分隔开字段，减少了分隔符的使用;
+    - 各字段存储得非常紧凑，存储空间利用率非常高;
+    - 若字段没有被设置字段值，那么该字段在序列化时的数据中是完全不存在的，即不需要编码
+
+
+#### 5.2 ProtoBuf编码方式
+
 
 
 #### 参考博客
@@ -276,8 +302,10 @@
     - https://www.jianshu.com/p/60d8480083f0
 - grpc原理及四种实现方式
     - https://zhuanlan.zhihu.com/p/576031935
-
-
+- Protobuf 使用介绍及原理
+    - https://gitee.com/chenjim/ProtoBuf
+- protobuf实现原理,protobuf语法
+    - https://www.zhangshilong.cn/work/268633.html
 
 
 
