--- a/Read/ReadAndroid/07.库的设计/03.OkHttp网络请求设计.md
+++ b/Read/ReadAndroid/07.库的设计/03.OkHttp网络请求设计.md
@@ -3,7 +3,7 @@
     - 1.1 项目背景
     - 1.2 遇到问题
     - 1.3 设计目标
-    - 1.4 产生收益
+    - 1.4 问题思考一下
 - 02.开发设计思路
     - 2.1 整体设计思路
     - 2.2 创建请求Client
@@ -24,7 +24,7 @@
     - 3.8 连接请求实现
     - 3.9 response处理
 - 04.一些技术点思考
-    - 4.5 
+    - 4.2 Dispatcher调度 
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -47,6 +47,12 @@
 
 
 #### 1.2 基础概念
+- OkHttp简单介绍
+    - 1.支持HTTP2/SPDY
+    - 2.socket自动选择最好路线，并支持自动重连
+    - 3.拥有自动维护的socket连接池，减少握手次数
+    - 4.拥有队列线程池，轻松写并发
+    - 5.拥有Interceptors轻松处理请求与响应（比如透明GZIP压缩）基于Headers的缓存策略
 
 
 #### 1.3 简单使用
@@ -55,10 +61,21 @@
     Response response = okHttpClient.newCall(request).execute();
     okHttpClient.newCall(request).enqueue(callback);
     ```
+- 有哪些比较重要的类
+    - OKHttpClient类，这个是创建请求客户端对象
+    - Request类和Response类，这个是发送请求和接收响应
+    - Call类和RealCall类，这个是创建call请求操作，Call对象(一个准备好了的可以执行和取消的请求)。
+    - Dispatcher类，这个是分发器。
 
 
-#### 1.4 产生收益
-
+#### 1.4 问题思考一下
+- OkHttp设计：OkHttp整体设计思路是什么样的？request和respond分别如何设计？如何设计call请求操作？
+- OkHttp同步异步：如何设计同步和异步请求？同步操作做了什么？异步操作如何处理逻辑？
+- OkHttp拦截器：拦截器是如何设计的？为什么需要拦截器？拦截器如何处理拦截，和乡下人分发逻辑？
+- OkHttp缓存：
+- OkHttp分发器：
+- OkHttp线程池：
+- OkHttp重试：网络如何做重试机制的设计？
 
 
 
@@ -76,13 +93,22 @@
     - 第五步：添加各种拦截器，缓存拦截器，
     - 第六步：处理缓存拦截，数据复用的技术逻辑
     - 第七步：创建连接请求的操作，给服务端发送请求
-    - 第八步：获取返回response数据
+    - 第八步：获取返回response数据，这里主要是处理code和body数据
 
 
 
 #### 2.2 创建请求Client
 - 为何要创建Client
     - 创建OkHttpClient对象，主要是用于Api网络请求的对象。类似于初始化网络请求，可以设置超时时间，日志打印拦截器，代理，ssl校验，域名校验等等。
+- 创建OkHttpClient如下所示
+    ``` java
+    okHttpClient = new OkHttpClient.Builder()
+            .addInterceptor(new LoggerInterceptor())
+            .connectTimeout(15, TimeUnit.SECONDS)
+            .writeTimeout(20, TimeUnit.SECONDS)
+            .readTimeout(20, TimeUnit.SECONDS)
+            .build();
+    ```
 
 
 #### 2.3 封装Request
@@ -111,19 +137,40 @@
     okHttpClient.newCall(request).execute();
     okHttpClient.newCall(request).enqueue(callback);
     ```
-- 如何将一个在子线程中做耗时操作的任务变成同步？
-    - 
-- 如何设计异步操作？
-    - 
+- 同步和异步处理任务流程图？
+    - ![image](https://img-blog.csdnimg.cn/2020032017390425.png)
+- 网络请求肯定涉及多线程，如何处理大量任务
+    - 采用Dispatcher作为调度，与线程池配合实现了高并发，低阻塞的的运行。针对请求任务，采用Deque作为集合，按照入队的顺序先进先出。
+
 
 
 #### 2.6 拦截器的设计
+- OKHttp有两种调用方式，一种是阻塞的同步请求，一种是异步的非阻塞的请求。
+    - 但是无论同步还是异步都会调用下RealCall的 getResponseWithInterceptorChain方法来完成请求，同时将返回数据或者状态通过Callback来完成。
+- 设计拦截器的核心原理
+    - Interceptor 负责拦截和分发。先来看看含义：观察，修改以及可能短路的请求输出和响应请求的回来。通常情况下拦截器用来添加，移除或者转换请求或者回应的头部信息。
+    - 拦截器，就像水管一样，把一节一节的水管(拦截器)连起来，形成一个回路。实际上client到server也是如此，通过一个又一个的interceptor串起来，然后把数据发送到服务器，又能接受返回的数据，每一个拦截器(水管)都有自己的作用，分别处理不同东西，比如消毒，净化，去杂质，就像一层层过滤网一样。
+- 接口是如何设计的
+    ``` java
+    public interface Interceptor {
+       //负责拦截
+      Response intercept(Chain chain) throws IOException;
+      interface Chain {
+         //负责分发、前行
+        Response proceed(Request request) throws IOException;
+      }
+    }
+    ```
 
 
 #### 2.7 缓存拦截的设计
+- 
 
 
 #### 2.8 连接请求设计
+- ConnectInterceptor的设计
+    - 连接拦截器，这才是真行的开始向服务器发起器连接。
+
 
 
 #### 2.9 返回response
@@ -141,8 +188,9 @@
     - 3、它的方法只有一个：newCall.返回一个Call对象(一个准备好了的可以执行和取消的请求)。
 
 
+
 #### 3.3 request实践
-- 主要是封装一个Request请求体
+- 主要是封装一个Request请求体。
     ``` java
     Request request = new Request.Builder()
             .url(url)
@@ -171,14 +219,43 @@
 - execute同步调用流程
     > RealCall#execute()，这个主要是执行同步操作的核心方法。首先是判断call是否执行过，可以看出每个Call对象只能使用一次原则。
     > Dispatcher#executed()，将任务添加到Deque队列中
+        > Dispatcher#executed()，里面发现是runningSyncCalls执行了add方法，可以发现runningSyncCalls是ArrayDeque对象。
+        > Dispatcher#runningSyncCalls，它是双向队列，runningSyncCalls是一个存放同步请求的双向队列。
     > RealCall#getResponseWithInterceptorChain()，这个是添加各种拦截器，然后创建RealInterceptorChain对象执行请求操作
-    > RealInterceptorChain#proceed，在这个里面获取拦截器，
+        > getResponseWithInterceptorChain()#interceptors.add，不断地add各种拦截器。有重定向，缓存，连接，自定义拦截器等等。
+    > RealInterceptorChain#proceed，在这个里面获取拦截器，看到在proceed方面里面又new了一个RealInterceptorChain类的next对象
+        > 这个next对象和chain最大的区别就是index属性值不同chain是0.而next是1，然后取interceptors下标为1的对象的interceptor。
+        > 由从上文可知，如果没有开发者自定义的Interceptor时，首先调用的RetryAndFollowUpInterceptor，如果有开发者自己定义的interceptor则调用开发者interceptor。
     > interceptor#intercept()，最后通过拦截器请求操作，获取response响应数据
 - enqueue异步调用流程
-    > 
+    > RealCall#enqueue(callback)，由于executed默认为false，所以先进行判断是否为true，为true则直接跑异常，没有则设置为true，可以看出executed这个是一个标志，标志这个请求是否已经正在请求中
+    > Dispatcher#enqueue()，是Dispatcher对象所以实际调用的是Dispatcher的enqueue()
+        > Dispatcher#readyAsyncCalls，readyAsyncCalls是一个存放异步请求的双向队列。
+        > Dispatcher#promoteAndExecute()，将符合条件的调用从{readyAsyncCalls}提升到{runningAsyncCalls}，并在executor服务上运行它们。
+        > Dispatcher#promoteAndExecute()#asyncCall.executeOn，遍历去执行异步任务
+        > RealCall#AsyncCall#executeOn()，创建一个executorService去执行runnable任务。在子线程中做任务
+        > NamedRunnable#run()，然后去执行execute()方法，该方法是抽象的。具体看子类对该方法的实现。
+        > RealCall#AsyncCall#execute，又调用了getResponseWithInterceptorChain()，这块跟同步调用逻辑一样。然后通过responseCallback处理结果。
+
 
 
 #### 3.6 拦截器实践
+- interceptor接口详解
+    - Interceptor是一个接口，主要是对请求和相应的过滤处理，其中有一个抽象方法即Response intercept(Chain chain) throws IOException负责具体的过滤。
+    - 在他的子类里面又调用了Chain，从而实现拦截器调用链(chain)，所以真正实现拦截作用的是其内部接口Chain。
+- Interceptor.Chain的实现类**都**是RealInterceptorChain，也就说说处理调用过程的实现是RealInterceptorChain。
+    - 所以RealInterceptorChain持有一个List的Interceptor，通过对这个List的Interceptor进行迭代和递归推进。让我们看看源码实现。
+- RealInterceptorChain#proceed()很核心的操作步骤理解如下
+    - 第一步，先判断是否超过list的size，如果超过则遍历结束，如果没有超过则继续执行
+    - 第二步calls+1
+    - 第三步new了一个RealInterceptorChain，其中然后下标index+1
+    - 第四步 从list取出下一个interceptor对象
+    - 第五步 执行interceptor的intercept方法
+- RealInterceptorChain#proceed()核心思想设计
+    - 每一个RealInterceptorChain对应一个interceptor,然后每一个interceptor再产生下一个RealInterceptorChain，直到List迭代完成。
+- 拦截器中的设计模式
+    - 既一个网络请求，按一定的顺序，经由多个拦截器进行处理，该拦截器可以决定自己处理并且返回我的结果，也可以选择向下继续传递，让后面的拦截器处理返回它的结果。这个设计模式叫做责任链模式。
+
 
 
 #### 3.7 缓存拦截实现
@@ -188,6 +265,58 @@
 
 
 #### 3.9 response处理
+
+
+
+### 04.一些技术点思考
+#### 4.2 Dispatcher调度
+- 线程池executeService的设计
+    - 创建一个自定义ThreadPoolExecutor线程池对象。需要注意两点：
+    - 第一点：在OKHttp中，创建了一个阀值是Integer.MAX_VALUE的线程池；第二点：SynchronousQueue每个插入操作必须等待另一个线程的移除操作。
+- 发起网络请求
+    - 整个框架主要通过Call来封装每一次的请求。同时Call持有OkHttpClient和一份Request。而每一次的同步或者异步请求都会有Dispatcher的参与。
+    - 同步：Dispatcher在执行同步的Call，接加入到runningSyncCall队列中，实际上并没有执行该Call，而是交给外部执行。
+    - 异步：将Call加入readyAsyncCall排队等待，将符合条件的调用从{readyAsyncCalls}提升到{runningAsyncCalls}，并在executor服务上运行它们。
+    - 异步操作中符合条件是指，如果当前正在执行的call的数量大于maxRequest(64)，或者该call的Host上的call超过maxRequestsPerHos(5)，则加入readyAsyncCall排队等待，否则加入runningAsyncCalls并执行。
+- 结束网络请求
+    - 具体看 RealCall#AsyncCall#executeOn()和execute()：从ready到running，在每个call结束的时候都会调用finished【这个是在try-finally中执行的】。
+- OKHttp同步调度流程分析
+    - 第一步：是调用了RealCall的execute()方法里面调用executed(this);
+    - 第二步：在Dispatcher里面的executed执行入队操作
+    - 第三步：执行getResponseWithInterceptorChain();进入拦截器链流程，然后进行请求，获取Response，并返回Response result 。
+    - 第四步：执行client.dispatcher().finished(this)操作
+- OKHttp异步调度流程分析
+    - 第一步：是调用了RealCall的enqueue()方法
+    - 第二步：在Dispatcher里面的enqueue执行入队操作。这个地方有条件
+        - runningAsyncCalls.size() < maxRequests 表示当前正在运行的AsyncCall是否小于maxRequests = 64
+        - runningCallsForHost(call) < maxRequestsPerHos 表示同一个地址访问的AsyncCall是否小于maxRequestsPerHost = 5;即 当前正在并发的请求不能超过64且同一个地址的访问不能超过5个
+    - 第A步：第一种情况A
+        - 第三步：可以直接入队。把任务放到runningAsyncCalls中
+        - 第四步：线程池executorService执行execute()方法
+        - 第五步：执行AsyncCall的execute()方法
+        - 第六步：执行getResponseWithInterceptorChain();进入拦截器链流程，然后进行请求，获取Response。
+        - 第七步：执行client.dispatcher().finished(this)操作 进行出队操作
+    - 第B步：第二种情况B
+        - 第三步：不能直接入队，需要等待。把任务放到readyAsyncCalls中，能进入等待则说明当前要么有64条正在进行的并发，要么同一个地址有5个请求，所以要等待。
+        - 第四步：先判断是否满足 初步入队条件。如果此时 并发的数量还是大于maxRequests=64则return并继续等待；如果此时，没有等待的任务，则直接return并继续等待。
+        - 第五步：在Dispatcher#promoteAndExecute()中，此时满足条件，则从等待队列面移除这个call【i.remove()】，然后添加到正在运行的队列中【runningAsyncCalls.add(asyncCall)】。
+        - 第六步：线程池executorService执行execute()方法
+        - 第七步：执行AsyncCall的execute()方法
+        - 第八步：执行getResponseWithInterceptorChain();进入拦截器链流程，然后进行请求，获取Response。
+        - 第九步：如果是正常的获取到Response，则执行responseCallback.onResponse()
+        - 第十步：执行client.dispatcher().finished(this)操作 进行出队操作
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
