--- a/Read/ReadQuestion/00.项目工作技能问题.md
+++ b/Read/ReadQuestion/00.项目工作技能问题.md
@@ -18,8 +18,8 @@
 - 网络专题：网络优化，弱网，监控。如何抓包，放抓包处理等等，避免网络拦截
 - 内存专题：内存监控，内存治理，内存如何分配。内存泄漏怎么排查，平常有做过哪些内存优化相关的工作？
 - 启动专题：启动优化，页面打开优化，统计耗时。App启动过程有哪些优化？
-- 稳定性专题：稳定性优化，做了那些稳定性工作，hook疑难问题解决？
-- 安全专题：安全防御，挂载，xposed的工作原理。如何防抓包？
+- 稳定性专题：稳定性优化，做了那些稳定性工作，产生那些业绩，hook疑难问题解决？
+- 安全专题：安全防御，挂载，xposed的工作原理。如何防抓包？涉及到抓包原理是什么？
 - 图片专题：图片优化，大图检测，大图加载，图片加载流程，如何减少图片占用内存，图片圆角处理
 - OOM专题：OOM是如何产生，OOM场景，OOM如何优化，OOM排查思路，OOM是如何监控
 - FPS专题：通过invalidate说一下屏幕刷新机制？什么是流畅度？说一下Choreographer作用，VSYNC信号理解？FPS监控设计如何做？
