feat：json和proto效率测试

--- a/Read/ReadAndroid/07.库的设计/03.OkHttp网络请求设计.md
+++ b/Read/ReadAndroid/07.库的设计/03.OkHttp网络请求设计.md
@@ -71,11 +71,10 @@
 #### 1.4 问题思考一下
 - OkHttp设计：OkHttp整体设计思路是什么样的？request和respond分别如何设计？如何设计call请求操作？
 - OkHttp同步异步：如何设计同步和异步请求？同步操作做了什么？异步操作如何处理逻辑？
-- OkHttp拦截器：拦截器是如何设计的？为什么需要拦截器？拦截器如何处理拦截，和乡下人分发逻辑？
-- OkHttp缓存：
-- OkHttp分发器：
-- OkHttp线程池：
-- OkHttp重试：网络如何做重试机制的设计？
+- OkHttp拦截器：拦截器是如何设计的？为什么需要拦截器？拦截器如何处理拦截，和向下分发逻辑？如何做重试机制的设计？
+- OkHttp缓存：如何设计缓存？什么情况下会用到网络缓存？缓存拦截器的核心思想是什么？
+- OkHttp分发器：同步和异步请求的Dispatcher是如何调度的？设计的巧妙之处是什么？
+- OkHttp线程池：使用了什么线程池？是如何管理线程任务？跟普通线程池使用有何区别？
 
 
 
