--- a/Read/ReadQuestion/04.Android性能优化.md
+++ b/Read/ReadQuestion/04.Android性能优化.md
@@ -67,8 +67,13 @@
 - Retrofit：采用动态代理，那么什么是动态代理，有何特点？Retrofit如何加载API接口，其核心原理是什么？
 - Glide：它怎么实现图片的加载进度条，Glide的缓存是怎么设计的？为什么要用弱引用。Glide 的源码设计哪里很微妙？说一下三级缓存的原理？描述一下内存缓存的容器？
 - MMKV库：mmkv了解吗？它是如何存储数据的，mmap为什么比io高效，如何避免线程安全，为何进程杀死后仍然能保存好数据，是怎么做到的？如何保证多进程写入安全？
-- OkHttp：请求怎么管理，它的线程池怎么实现？网络请求缓存处理是怎样的逻辑思路？
 - OkHttp：官方为什么会把 HttpClient 和 HttpUrlConnection 替换为 OkHttp 默认实现？它有什么好处？
+- OkHttp设计：OkHttp整体设计思路是什么样的？request和respond分别如何设计？如何设计call请求操作？
+- OkHttp同步异步：如何设计同步和异步请求？同步操作做了什么？异步操作如何处理逻辑？
+- OkHttp拦截器：拦截器是如何设计的？为什么需要拦截器？拦截器如何处理拦截，和向下分发逻辑？网络如何做重试机制的设计？
+- OkHttp缓存：如何设计缓存？什么情况下会用到网络缓存？缓存拦截器的核心思想是什么？
+- OkHttp分发器：同步和异步请求的Dispatcher是如何调度的？设计的巧妙之处是什么？
+- OkHttp线程池：使用了什么线程池？是如何管理线程任务？跟普通线程池使用有何区别？
 - LeakCanary：LeakCanary 的核心工作流程，它的设计思想是什么？初始化做了那些工作？如何设计组件的监听(怎么监听ViewModel，Service销毁事件)？
 - LeakCanary：如何判断内存的泄漏？内存泄漏的判定条件是什么 ？检测内存泄漏的机制原理是什么？发现泄漏对象后就会触发分析吗？
 - LeakCanary：检测出内存泄漏后，它又是如何生成泄漏信息的？ 内存泄漏的输出轨迹是怎么得到的？为什么不能用到线上环境？
