--- a/Read/ReadBlogWiki/06.职场总结/03.职场打工人提升.md
+++ b/Read/ReadBlogWiki/06.职场总结/03.职场打工人提升.md
@@ -15,12 +15,11 @@
 - 在一周的时间内，工作会占据一个人一半以上的时间。如果你在业余时间学到的知识，不能很好地应用到工作中来，就无法给知识塑造一种良好的实践环境，就无法形成一种输入和输出的闭环，也很难真正高效透彻地把知识转换为你自身的技能和能力。
 - 只有在工作中提供的大体量的业务背景下，才能有机会去真正精通当前项目中使用到的技术，记住，一定要结合工作项目来快速成长。工作最好的认知就是：它是金钱和能力的双重收获。
 - 职场如何做事？1、保证质量和速度；2、主动汇报项目背景、目标、进度、结果，以及你的思考与复盘；3、与人对接时，先换位思考，别人需要的是什么？如何表达才能让别人理解？别人表达后，如果不是完全理解，将自己的理解告诉别人，询问自己的理解是否到位。这三点是职场必备的核心技能，务必要掌握。
-
+- 针对个人职业生涯成长，都要设定“跳一跳才能够得着的目标”，有挑战性的目标才能激发出高水准的表现，带来更多的锻炼和提升，当然也不至于够不着，让你产生强烈的挫败感。
 
 
 ### 02.高效学习和工作
-- 高效工作的本质无非就是注重投入产生比，即：1、提升收益。2、减少成本。
-
+- 高效工作的本质无非就是注重投入产生比，即：1、提升收益。2、减少成本。无论那种工作，都离不开这两个点。
 
 
 ### 03.多任务并行耗能
@@ -47,6 +46,14 @@
 
 
 ### 06.突破边界不设防
+#### 6.1 设置边界要稍大
+- 工作时，不分哪些是我该做的、哪些不是我该做的。做完自己的工作后，对于大部分同事的问题，只要能帮助解决，我都去做。做事也从不设边界，即使负责技术，但遇到产品与销售上有问题，也会积极地参与讨论。
+- 对于我们大多数人来说，进入社会，我们唯一拥有的资本就是自己。在你人生资本的原始累积阶段，如果你连这点额外的努力都不愿意付出，又怎么可能积累到足够的资源呢？
+- 有些人会觉得，每多付出一点额外的努力，公司不就占便宜了吗？这个心态很有问题。优秀的人都是为自己打工，和公司一起成长，相互借力，才能找到自己的价值。无论公司怎么发展，个人能力最终是沉淀到了自己的身上，这远比你浪费时间和摸鱼更好。
+- 我们潜意识里常常幻想自己还拥有大把的时间，拥有无限的可能，但很多现实是，你的时间就在庸庸碌碌的工作里一点一点被消耗掉了，而不是每日精进，精益求精。
+
+
+
 #### 6.1 跨越断层怎么做
 - 职场阶梯是很多人已经走过的路，只需要沿着这条路去持续成长就能爬上还算不低的楼层。只是到了一定楼层后会发现上面似乎还有几层，但却看不见下一层的楼梯。因为再往上走的人就不多了，也就没能成了路，这可能就是所谓成长阶梯的断层。
 - 到了一定阶段，我们可能会面临方向的选择，不同的方向选择意味着不同的路径，会碰到不同的断层，而跨越断层也需要不同的方法。
