--- a/Read/ReadQuestion/00.项目工作技能问题.md
+++ b/Read/ReadQuestion/00.项目工作技能问题.md
@@ -100,5 +100,14 @@
 
 
 
+### 08.主流库问题大汇总
+- Retrofit：采用动态代理，那么什么是动态代理，有何特点？Retrofit如何加载API接口，其核心原理是什么？
+- Glide：Glide 的源码设计哪里很微妙？Glide的缓存是怎么设计的？为什么要用弱引用。说一下三级缓存的原理？描述一下内存缓存的容器？
+- MMKV库：mmkv了解吗？它是如何存储数据的，mmap为什么比io高效，如何避免线程安全，为何进程杀死后仍然能保存好数据，是怎么做到的？如何保证多进程写入安全？
+- OkHttp：请求怎么管理，它的线程池怎么实现？网络请求缓存处理是怎样的逻辑思路？
+- LeakCanary：LeakCanary 的核心工作流程，它的设计思想是什么？如何设计组件的监听？如何判断内存的泄漏？如何分析内存？
+- Gson：
+- Xposed：
+- ARouter：
 
 
