feat：完善初始化库和gRPC网络笔记

--- a/Read/ReadAndroid/01.大型方案/01.组件化开发优化实践.md
+++ b/Read/ReadAndroid/01.大型方案/01.组件化开发优化实践.md
@@ -167,6 +167,8 @@
 - 查看依赖树，在项目根目录下执行如下命令，将依赖导出到文件：
     ``` java
     ./gradlew app:dependencies > log_depend.txt
+    //如果不想要树形结构，可以用下面这个显示更加轻爽
+    ./gradlew app:androidDependencies > log_depend.txt
     ```
 - implementation：
     - 只能在内部使用此模块，比如我在一个library中使用implementation依赖了gson库，然后我的主项目依赖了library，那么，我的主项目就无法访问gson库中的方法。这样的好处是编译速度会加快，推荐使用implementation的方式去依赖
