--- a/Read/ReadWork/02.工作日常/01.日常工作既要.md
+++ b/Read/ReadWork/02.工作日常/01.日常工作既要.md
@@ -1,6 +1,21 @@
 #### 每日站会
 
 
+#### 2023-5-12
+- 昨天工作
+  - 1.熟悉项目整体结构，梳理各个模块作用，架构分层和依赖关系
+  - 2.查看项目技术依赖库以及库的作用
+  - 3.熟悉项目初始化启动流程，理解初始化分发流程，路由跳转设计，模块支付调用设计等
+  - 4.罗列业务熟悉计划排期，将项目拆分成任务，按照一定节奏学习和梳理
+- 今天计划
+  - 1.熟悉状态上报业务，业务抽象逻辑。主要是WxBusinessHelper负责的业务！
+  - 2.熟悉硬件hardware库的设计，和相关业务
+  - 3.熟悉network网络请求库的设计，以及网络请求流程
+- 有什么问题
+  - 暂时无
+
+
+
 
 #### 2023-5-11
 - 昨天工作
@@ -9,7 +24,7 @@
   - 3.开启主项目，以及maven库权限，拉项目代码以及编译运行ok
 - 今天计划
   - 1.熟悉项目技术栈，和整体核心业务梳理
-  - 2.向同事请教项目业务讲解，先整体了解业务
+  - 2.向炳亿同事请教项目业务讲解，先整体了解业务
   - 3.熟悉项目做个小规划，罗列熟悉点，以及截止日期
 - 有什么问题
   - 暂时无
