feat：json和proto效率测试

--- a/Read/ReadBlogWiki/04.执行策略/16.闭环思维方法论.md
+++ b/Read/ReadBlogWiki/04.执行策略/16.闭环思维方法论.md
@@ -49,7 +49,9 @@
 
 
 ### 06.事情效果做更好
-- 通过计划分解，不断总结，得出实施步骤，形成更小的实施阶段，将这些内容，再及时的进行回溯，迭代，就形成了一个闭环的工作过程。工作目标在按工作计划实施的过程中，是需要不断修正和调整的，而整个闭环的迭代过程，正是保证目标得以实现，计划有效执行的切实保障。落地过程中各个环节是否有连动机制，做到紧密相扣，就是提升工作效率的有效方法。
+- 通过计划分解，不断总结，得出实施步骤，形成更小的实施阶段，将这些内容，再及时的进行回溯，迭代，就形成了一个闭环的工作过程。
+- 工作目标在按工作计划实施的过程中，是需要不断修正和调整的，而整个闭环的迭代过程，正是保证目标得以实现，计划有效执行的切实保障。
+- 落地过程中各个环节是否有连动机制，做到紧密相扣，就是提升工作效率的有效方法。
 
 
 
