feat：完善grpc学习笔记

--- a/Read/ReadWork/02.工作日常/01.日常工作既要.md
+++ b/Read/ReadWork/02.工作日常/01.日常工作既要.md
@@ -1,36 +1,29 @@
 #### 每日站会
 
 
-交大需求优化-开发[熟悉业务]
+1、机具注册绑定功能
+2、多活IP下发、自动切换功能
+3、原生码。微信原生码、支付宝原生码、银联码、中行码
+4、电子码。各厂商扫码头api、扫码流程、电子码解码
+5、实体卡。各厂商读卡器api、读卡验卡流程（CPU卡、M1卡、PSAM卡、超级SIM卡）、卡数据解析、写卡逻辑、利旧发卡
+6、离线人脸。微信支付人脸api、人脸流程（初始化、凭证获取、启动人脸、识别、支付凭证获取、异常处理）
+7、刷掌。消费机与刷掌机通信机制（深大、深航模式）、卡码掌一体机刷掌api、刷掌机专用键盘、点餐机通信（串口通信）、行政模式和saas模式兼容处理、UI交互
+8、支付模式。随机支付、定额支付、计次支付、取餐、餐次定额、扣券模式、应急模式
+9、通用风控。限额、限次、时间控制、身份控制
+10、行政专属风控。商户维度、个人维度、早餐控制、夜宵券控制
+11、离线订单上传机制。代扣订单、人脸订单、夜宵券订单；上传逻辑、重试机制
+12、双向通信。串口通信、HID通信、协议数据结构、节点权限、数据处理、异常处理等
+13、各个功能页面实现、交互逻辑。交易记录、营业数据、设置、网络、声音等
+14、厂商系统api接口。以太网相关接口、串口节点、移动网络开关、重启、静默安装、修改系统时间
 
 
 
-#### 2023-5-12
-- 昨天工作
-  - 1.熟悉项目整体结构，梳理各个模块作用，架构分层和依赖关系
-  - 2.查看项目技术依赖库以及库的作用
-  - 3.熟悉项目初始化启动流程，理解初始化分发流程，路由跳转设计，模块支付调用设计等
-  - 4.罗列业务熟悉计划排期，将项目拆分成任务，按照一定节奏学习和梳理
-- 今天计划
-  - 1.熟悉状态上报，业务抽象，支付，模块初始化逻辑。主要是WxBusinessHelper负责的业务！
-  - 2.熟悉硬件hardware库的设计，和相关业务
-  - 3.熟悉network网络请求库的设计，以及网络请求流程
-- 有什么问题
-  - 暂时无
-
-
-
-
-#### 2023-5-11
-- 昨天工作
-  - 1.完成入职相关事项，以及培训。
-  - 2.完善电脑配置，Android相关工具以及环境配置
-  - 3.开启主项目，以及maven库权限，拉项目代码以及编译运行ok
-- 今天计划
-  - 1.熟悉项目技术栈，和整体核心业务梳理
-  - 2.向炳亿同事请教项目业务讲解，先整体了解业务
-  - 3.熟悉项目做个小规划，罗列熟悉点，以及截止日期
-- 有什么问题
-  - 暂时无
+5月15日-5月19日
+1、熟悉机具注册绑定功能
+2、熟悉扫码模块包含（重点）：
+扫码模块：各厂商扫码头api、扫码流程
+原生码支付： 微信原生码、支付宝原生码、银联码、中行码
+电子码支付： 电子码解码、支付
+3、通过交大定制化优化需求，了解交易记录页面、营业数据页面实现逻辑、扫码支付流程
 
 
