feat：添加adb安装和清除缓存笔记

--- a/Read/YCBlogWiki/test/04.adb命令大全说明.md
+++ b/Read/YCBlogWiki/test/04.adb命令大全说明.md
@@ -2,6 +2,7 @@
 - 01.adb常用命令
 - 02.adb命令截图
 - 03.adb安装应用
+- 04.adb清app缓存
 - 06.adb问题分析
 
 ### 01.adb常用命令
@@ -39,6 +40,13 @@
   - 是因为该Android机器中已经存在了比这个应用的版本号更高的同包名应用。
 - 解决方法：
   - adb install -r -d C:\Users\zl\Desktop\xxx.apk(包名)
+
+
+### 04.adb清app缓存
+- adb如何清理特定app缓存
+  - adb devices 查看全部设备
+  - adb shell
+  - pm clear com.tencent.wx
 
 
 
