feat：git学习笔记完善

--- a/Read/YCBlogWiki/git/02.Linux基本命令.md
+++ b/Read/YCBlogWiki/git/02.Linux基本命令.md
@@ -13,7 +13,8 @@
 ### 01.Linux文件系统概览
 #### 1.1 Linux文件系统简介
 - 在Linux操作系统中，所有被操作系统管理的资源，例如网络接口卡、磁盘驱动器、打印机、输入输出设备、普通文件或是目录都被看作是一个文件。
-- 也就是说在LINUX系统中有一个重要的概念：**一切都是文件**。其实这是UNIX哲学的一个体现，而Linux是重写UNIX而来，所以这个概念也就传承了下来。在UNIX系统中，把一切资源都看作是文件，包括硬件设备。UNIX系统把每个硬件都看成是一个文件，通常称为设备文件，这样用户就可以用读写文件的方式实现对硬件的访问。
+- 也就是说在LINUX系统中有一个重要的概念：**一切都是文件**。其实这是UNIX哲学的一个体现，而Linux是重写UNIX而来，所以这个概念也就传承了下来。
+- 在UNIX系统中，把一切资源都看作是文件，包括硬件设备。UNIX系统把每个硬件都看成是一个文件，通常称为设备文件，这样用户就可以用读写文件的方式实现对硬件的访问。
 
 
 #### 1.2 文件类型与目录结构
@@ -99,11 +100,12 @@
         - c：打包文件
         - v：显示运行过程
         - f：指定文件名
-- 比如：加入test目录下有三个文件分别是 :aaa.txt bbb.txt ccc.txt,如果我们要打包test目录并指定压缩后的压缩包名称为test.tar.gz可以使用命令：**`tar -zcvf test.tar.gz aaa.txt bbb.txt ccc.txt`或：`tar -zcvf test.tar.gz       /test/`**
+- 比如：加入test目录下有三个文件分别是 :aaa.txt bbb.txt ccc.txt
+  - 如果我们要打包test目录并指定压缩后的压缩包名称为test.tar.gz可以使用命令：**`tar -zcvf test.tar.gz aaa.txt bbb.txt ccc.txt`或：`tar -zcvf test.tar.gz       /test/`**
 
 
 #### 5.2 解压压缩包
-- 命令：tar [-xvf] 压缩文件
+- 命令：tar -xvf 压缩文件
     - 其中：x：代表解压
 - 示例：
     - 1 将/test下的test.tar.gz解压到当前目录下可以使用命令：**`tar -xvf test.tar.gz`**
@@ -183,6 +185,7 @@
     - `groupadd 选项 用户组` :增加一个新的用户组
     - `groupdel 用户组`:要删除一个已有的用户组
     - `groupmod 选项 用户组` : 修改用户组的属性
+
 
 
 ### 09.其他常用命令
