feat：熟悉张鸿洋百分比布局设计思想

--- a/Read/ReadBlogWiki/03.建立体系/01.信息过载怎么办.md
+++ b/Read/ReadBlogWiki/03.建立体系/01.信息过载怎么办.md
@@ -11,8 +11,10 @@
 ### 01.先来描述一场景
 - 每天都有大量的信息，知识，新闻等，让我们碎片化的时间感觉自己都是在学习。那么你究竟学习了什么东西？
 - 可能一时间难以回答这个问题，不要紧，可以坐下来静静思考一下……收藏好文章【收藏的可能下次就不会看了】，觉得这个文章很好，可是说不出所以然，究竟学到了什么？
-- 看到头条一些新闻，发现即使在一个地方上班，也能尽知天下大事，娱乐八卦，还有人间百态各种事情，让自己知识广度大有增长。我们发现自己有好多东西要学，但是哪些对我们有价值呢？哪些投资回报率不高呢？我们选择的标准是什么？
-- 我们好像懂得了很多东西，但是别人一问，我们却讲不出来……或者说出来没有自己的主见或深度；有些人阅读后能够形成自己的主见，并且结合自己的经历有深刻的分析；而有些人则只是看看而已，至于看完后，就难以想起刚才阅读究竟是讲了什么东西；甚至还有些，则是陷入了口水战。
+- 看到头条一些新闻，发现即使在一个地方上班，也能尽知天下大事，娱乐八卦，还有人间百态各种事情，让自己知识广度大有增长。
+- 我们发现自己有好多东西要学，但是哪些对我们有价值呢？哪些投资回报率不高呢？我们选择的标准是什么？
+- 好像懂得了很多东西，但是别人一问，我们却讲不出来……或者说出来没有自己的主见或深度；有些人阅读后能够形成自己的主见，并且结合自己的经历有深刻的分析；而有些人则只是看看而已，至于看完后，就难以想起刚才阅读究竟是讲了什么东西；甚至还有些，则是陷入了口水战。
+
 
 
 ### 02.信息过载的现状
@@ -27,6 +29,7 @@
 - 总是焦虑着完成更多，划掉 TODO List 上更多的事项，希望每日带着超额完成计划的充实与满足感入睡，最后这一切不过是一种疲于奔命带来的虚幻满足感。
 - 所以，在感觉大脑处于 “过载” 的疲倦中时，别“疲于奔命”，别硬撑，最好的办法就是去小憩片刻。
 - 进入了疲于奔命状态，其实我们就在不断给大脑喂任务，且不停地切换大脑任务，让它永远处于繁忙甚至超频状态。这样每个任务的执行效率都会下降且效果也不佳，所以导致执行任务的时间反而延长了，这就给我们营造了一种“忙碌、充实而疲倦”的虚幻假象。
+
 
 
 ### 04.心智模型去筛选
