--- a/Read/ReadBlogWiki/04.执行策略/02.有效学习这件事.md
+++ b/Read/ReadBlogWiki/04.执行策略/02.有效学习这件事.md
@@ -4,7 +4,7 @@
 - 03.明确学习的目标
 - 04.学习后付诸实践
 - 05.避免被过多干扰
-- 06.学习必须有产出
+- 06.学习必须有输出
 - 07.零碎学习可记录
 
 
@@ -37,8 +37,24 @@
 
 
 
-### 06.学习必须有产出
-- 学习要有产出。我之前看过这样一个观点，人其实有生产者和消费者两种角色。如果没有产出的话，只学习本身是一种消费。你每天忙着读书、看专栏，看起来付出了很多，超级努力超级辛苦，但如果没有产出，工作和生活也没有什么改变，那这样的学习和玩一会儿手机、看一会儿电影在本质上并没有太大的区别，只是一种另类的娱乐。
+### 06.学习必须有输出
+#### 6.1 理解输入和输出
+- 输入是指，平时看过什么书，逛什么论坛，学习过什么网站教程，听过讲座，听语音扩大知识面等等；
+- 输出是指，看书后获取什么感受，学到什么，转化成内需。看网站教程，实践有什么收获。哪怕平时做过一些小Demo，都算输出。
+
+
+
+#### 6.2 举一些输出案例
+- 比如，看专业性的书籍，看的时候记录笔记，然后实践，遇到问题，就去查询，最后看完书，也能够内化一部分书上的知识。
+- 看到好的演讲，看完后写写自己的感受，或者有的时候不想写，也可以思考一下，质疑一下，分析一下，这也是输出。
+- 听到好的音频，那么也可以记录一些启发自己思维的语句，或者自己阐述一下自己的认识，也也是输出。
+- 把获取到的知识，经过自己的选择和应用，内化成自己的经验或者技巧或者见识中，才能真正地为自己创造价值。
+- 如果说看书，看视频，听音频，根本不琢磨，只是被动的接收，只是浏览到这个东西，然后过去了，那么就很难有进一步的收获。
+- 你每天忙着读书、看专栏，看起来付出了很多，超级努力超级辛苦，但如果没有产出，工作和生活也没有什么改变，那这样的学习和玩一会儿手机、看一会儿电影在本质上并没有太大的区别，只是一种另类的娱乐。
+
+
+#### 6.3 学习一定要产出
+- 学习要有产出。我之前看过这样一个观点，人其实有生产者和消费者两种角色。如果没有产出的话，只学习本身是一种消费。
 - 一定要产出一些作品，比解决了一个工作中的技术难题，你也可以把自己的学习过程中的思考写下来分享出去，还可以以教代学，把自己学习到的东西教给别人，看看能不能教得会。教学相长，就是这个道理。
 
 
