--- a/Read/YCBlogWiki/test/04.adb命令大全说明.md
+++ b/Read/YCBlogWiki/test/04.adb命令大全说明.md
@@ -5,6 +5,8 @@
 - 04.adb清app缓存
 - 06.adb问题分析
 
+
+
 ### 01.adb常用命令
 - adb 常用命令
   - adb version --查看adb版本
@@ -25,6 +27,7 @@
   - adb shell pm list packages -f com.xxx     获取对应app的包的位置
 
 
+
 ### 02.adb命令截图
 - adb shell screencap -p /sdcard/screenshot.png
   - 该命令的作用是将当前手机屏幕截图保存在sdcard路径下。我们可以根据实际需求来修改保存路径。
@@ -32,14 +35,16 @@
   - 该命令的作用是将sdcard路径下的截图文件拷贝到本地D盘上。我们可以根据实际需求来修改导出路径。
 
 
+
 ### 03.adb安装应用
 - 安装apk指令：
   - adb install apk路径
-- 问题描述：安装apk出现，Failure [INSTALL_FAILED_VERSION_DOWNGRADE]
-  - 使用adb install 命令安装Android应用的时候提示Android Failure [INSTALL_FAILED_VERSION_DOWNGRADE]
+- 问题描述：安装apk出现，Failure INSTALL_FAILED_VERSION_DOWNGRADE
+  - 使用adb install 命令安装Android应用的时候提示Android Failure INSTALL_FAILED_VERSION_DOWNGRADE
   - 是因为该Android机器中已经存在了比这个应用的版本号更高的同包名应用。
 - 解决方法：
   - adb install -r -d C:\Users\zl\Desktop\xxx.apk(包名)
+
 
 
 ### 04.adb清app缓存
