--- a/Read/ReadBlogWiki/01.出发启程/05.经营好自我公司.md
+++ b/Read/ReadBlogWiki/01.出发启程/05.经营好自我公司.md
@@ -38,7 +38,8 @@
 
 
 ### 04.经营自己如公司
-- 企业做买卖讲究供求关系一样，很多时候在职场上，决定你价值的，除了本身能提供的“产品和服务”外，还取决于行业内的供求关系。如果你的技能在人才市场上供过于求，那么你的身价自然会变低；如果你的技能在人才市场上供不应求，那么你的身价自然会相对较高。
+- 企业做买卖讲究供求关系一样，很多时候在职场上，决定你价值的，除了本身能提供的“产品和服务”外，还取决于行业内的供求关系。
+- 如果你的技能在人才市场上供过于求，那么你的身价自然会变低；如果你的技能在人才市场上供不应求，那么你的身价自然会相对较高。
 - 我们经营自己一般都要持续经营几十年之久，为了保证“基业长青”，还得围绕自己的主攻方向，努力打造自己的护城河。护城河可以是卓越的技术、专业的知识、深厚的经验、独特的资源、有影响力的个人品牌、优质的人脉网络、优秀的沟通协调能力、对未来的敏锐洞察等等。
 - 老板很苛刻，待遇很糟糕，我不是说你不可以跳槽，尽量让自己的简历好看一点，所以，哪怕在一个烂公司里，尽量做一些有价值的项目，做一些有价值的工作，经受一些技术挑战，不要总觉得自己吃了亏。说世间无伯乐，你没有努力和付出过，再好的伯乐也看不见你。
 - 不断加强自己的竞争性优势，让自己人生公司的越开越顺畅，选择也就会越来越多，比如当你对当前的客户不满意时，你就能随时终止这段合作关系，换一家客户。
